--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </nav>
         <div class="showcase-top">
 
-            <img class="img-one" src="images/netflixhome.jpg">
+            <img class="img-one" src="./images/netflixhome.jpg">
                 
             <div class="top1">
                 <h1 class="content1">Unlimited movies, TV </h1><br>
@@ -44,18 +44,18 @@
                     </p>
                 </div>
                 <div class="fl1-2">
-                    <img class="img-two" src="/index.html/images/netflixtv.png" alt="TV">
-                    <video loop autoplay class="video1" src="/index.html/images/video-tv-in-0819.m4v"></video>
+                    <img class="img-two" src="./images/netflixtv.png" alt="TV">
+                    <video loop autoplay class="video1" src="./images/video-tv-in-0819.m4v"></video>
                 </div>
             </div>
         </div>
         <div class="show2">
             <div class="fl2">
                 <div class="fl2-1">
-                    <img class="img-three" src="/index.html/images/mobile-0819.jpg" alt="netflix">
+                    <img class="img-three" src="./images/mobile-0819.jpg" alt="netflix">
                     <div class="playicon">
                         <div class="playiconimage">
-                            <img class="img-four" src="/index.html/images/boxshot.png" alt="playicon">
+                            <img class="img-four" src="./images/boxshot.png" alt="playicon">
                         </div>
                         <div class="nameandstatus">
                             <div class="text1">Stranger things</div>
